# final-project-TodFrog

./: .gitignore  README.md  final-presentation.pptx  final-project.ipynb  pyproject.toml
configs/: dataset_synthetic.yaml  episode_policy.yaml  episode_policy_pose_family.yaml  gru_episode_sweep.yaml  isaac_multiview_capture.yaml  isaac_preflight.yaml  isaac_schunk_motion_render.yaml  isaac_schunk_real_guided_motion_render.yaml  isaac_schunk_render.yaml  isaac_schunk_sample_command_render_full.yaml  isaac_schunk_sample_command_render_smoke.yaml  isaac_schunk_visual_rig_render.yaml  kinematic_rps.yaml  model_sweep.yaml  model_sweep_pose_family.yaml  pose_family_episode_sweep.yaml  real_skeleton_final_gesture_prediction.yaml  real_skeleton_final_gesture_prediction_hard_expanded.yaml  real_skeleton_three_class_wait_prediction.yaml  real_skeleton_three_class_wait_prediction_v2.yaml  real_skeleton_three_class_wait_prediction_v3.yaml  real_skeleton_three_class_wait_prediction_v4.yaml  real_skeleton_three_class_wait_prediction_v4_boundary_pairs.yaml  real_skeleton_three_class_wait_prediction_v4_contrastive.yaml  real_skeleton_three_class_wait_prediction_v4_delayed_paper_timing.yaml  real_skeleton_three_class_wait_prediction_v4_failure_focused.yaml  real_skeleton_three_class_wait_prediction_v4_fewshot.yaml  real_skeleton_three_class_wait_prediction_v4_fewshot_aug.yaml  real_skeleton_three_class_wait_prediction_v4_final_gate_micro.yaml  real_skeleton_three_class_wait_prediction_v4_hard_paper_scissors.yaml  real_skeleton_three_class_wait_prediction_v4_live_prompt_hard.yaml  (+38 more)
(+340 files in other folders)
